--- a/chai/settings/project.json
+++ b/chai/settings/project.json
@@ -21,10 +21,9 @@
   ],
   "simulator-orientation": false,
   "simulator-resolution": {
-    "height": 640,
-    "width": 960
+    "height": 1080,
+    "width": 1920
   },
   "use-customize-simulator": false,
-  "use-project-simulator-setting": false,
-  "start-scene": "current"
+  "use-project-simulator-setting": true
 }
