--- a/chai/settings/project.json
+++ b/chai/settings/project.json
@@ -25,5 +25,6 @@
     "width": 1920
   },
   "use-customize-simulator": false,
-  "use-project-simulator-setting": true
+  "use-project-simulator-setting": true,
+  "start-scene": "current"
 }
